--- a/src/assets/scss/components/_itemMusic.scss
+++ b/src/assets/scss/components/_itemMusic.scss
@@ -80,39 +80,22 @@
   }
 }
 
-.music__name {
-
-}
-
-.no-show {
-  position: absolute;
-  display: none;
-  top: 0;
-  left: 0 ;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(45deg, #fd8080, #7a5252);
-}
-
-.FooterMusic {
-  cursor: pointer;
-}
-
-.music:hover .no-show {
-  display: block;
-
-}
 
 .FooterMusic {
   width: 100%;
   height: 8rem;
   background-color: #fff;
   position: fixed;
-  bottom: 0;
+  bottom: -6rem;
   border-top: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all .5s;
+}
+.FooterMusic:hover {
+  bottom: 0;
+
 }
 
 .FooterMusic__left {
