--- a/src/assets/scss/components/_TheNav.scss
+++ b/src/assets/scss/components/_TheNav.scss
@@ -1,50 +1,96 @@
+// Logo
+.Brand {
+  font-size: 2rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: .5s all;
+
+  &:hover {
+    transform: translateY(-3px);
+    color: rgba(0, 0, 0, 0.54);
+    text-shadow: -5px 5px rgba(0, 0, 0, .1);
+  }
+}
+
+// Nav
+
 .nav {
-  display: flex;
-  align-self: stretch;
-  flex: 0 0 30%;
-  justify-content: flex-end;
+  position: relative;
 
   &__list {
     display: flex;
-    width: 80rem;
-    justify-content: center;
+
+    width: 100%;
+  }
+
+  &__item {
+    transition: .5s all;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.03);
+    }
+
+    &_active {
+      background-color: rgba(0, 0, 0, 0.03);
+    }
+  }
+
+  &__router {
+    position: relative;
+    display: flex;
+    height: 5rem;
     align-items: center;
+    font-size: 1.4rem;
+    text-decoration: none;
+    padding: 0 2rem;
+    color: black;
 
-    & > * {
-      font-size: 1.5rem;
-      padding: 0 2rem;
+    &:before {
+      content: '';
+      position: absolute;
+      background-color: #000000;
+      bottom: 0;
+      width: 0;
+      left: 0;
+      height: 2px;
+      transition: .3s ease;
+    }
+
+    &:hover:before {
+      position: absolute;
+      width: 100%;
     }
   }
 }
-
-.search {
-  margin-top: 5rem;
-  text-align: center;
-
-  &__input {
-    border: none;
-    border-bottom: 1px solid black;
-    width: 50rem;
-    padding: 0.5rem 1rem;
-
-    &:focus {
-      outline: none;
-    }
-  }
-}
-
-.router-link:hover {
-  color: black;
-  transition: 0.5s all;
-}
-
+//
 .SwiperBox {
   position: relative;
+  padding: 10rem 30rem;
   width: 800px;
   height: 300px;
   cursor: pointer;
   border-radius: 10px;
   overflow: hidden;
+
+  &:hover{
+    & .instBox{
+      bottom: 10px;
+    }
+
+    & .leftBtn{
+      left: 10px;
+
+    }
+
+    & .rightBtn{
+      right: 10px;
+
+    }
+  }
+
+
+
 }
 
 .imgBox {
@@ -55,6 +101,8 @@
   height: 320px;
   display: flex;
   justify-content: flex-start;
+
+
 }
 
 /* 图片默认样式 */
@@ -81,14 +129,17 @@
   cursor: pointer;
   font-size: 12px;
   font-weight: 500;
+  transition: all .3s;
+
 }
 
 .leftBtn {
-  left: 10px;
+  left: -30px;
+
 }
 
 .rightBtn {
-  right: 10px;
+  right: -30px;
 }
 
 /* 下方指示器盒子 */
@@ -96,19 +147,26 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 10px;
+  bottom: -10px;
+  transition: ease .5s;
   display: flex;
 }
 
 /* 小圆点 */
 .inst {
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
   border: 1px solid rgba(204, 204, 204, 0.5);
   margin-right: 15px;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
   cursor: pointer;
+  transition: all .3s;
+
+  &:hover{
+    width: 12px;
+    height: 12px;
+  }
 }
 
 .inst:last-child {
@@ -116,13 +174,15 @@
 }
 
 .instActv {
-  border: 1px solid #ff0000;
-  background: #ff0000;
+  background: #000000;
 }
 
 .Run {
+  margin-top: 5rem;
+  padding: 2rem 0;
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: #f3f3f3;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
 }
