--- a/src/assets/scss/components/_base.scss
+++ b/src/assets/scss/components/_base.scss
@@ -15,9 +15,8 @@ html{
   font-size: 62.5%;
 }
 
-body,.router-link{
+body{
   overflow-x: hidden;
-
   font-family: 'Open Sans',sans-serif;
   font-weight: 400;
   max-height: 100vh;
