--- a/src/assets/scss/components/_layout.scss
+++ b/src/assets/scss/components/_layout.scss
@@ -1,14 +1,21 @@
 .container{
-  height: 150rem;
+  max-height: 100vh;
 }
 
 .header{
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  height: 6rem;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
-  justify-content: center;
-
+  justify-content: space-between;
+  padding: .5rem 30rem;
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  height: 5rem;
 }
 
 .main{
